<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="F_GetTransportTubeStatuses" Id="{09b6220d-41cc-0b3f-3e37-f70d9621ad78}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_GetTransportTubeStatuses : ST_TransportTubeStatuses
VAR_INPUT
	eTransportTube : E_TransportTube;
END_VAR
VAR
	refTTDev : REFERENCE TO ST_TransportTubeDevices;
	stStatus : ST_TransportTubeStatuses := ();
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[refTTDev := F_GetTransportTubeDevices(eTransportTube);

stStatus.bIonPumpOn := refTTDev.refIonPump.q_xHVEna_DO;
stStatus.bGateValveOpen := refTTDev.refGateValve.M_IsOpen();
stStatus.fPiraniGaugeVal := refTTDev.refPiraniGauge.PG.rPRESS;
stStatus.fColdCathodeVal := refTTDev.refColdCathode.IG.rPRESS;

F_GetTransportTubeStatuses := stStatus;]]></ST>
    </Implementation>
    <LineIds Name="F_GetTransportTubeStatuses">
      <LineId Id="49" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="53" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>